# cli-detroix23

./: README.md  pyproject.toml
CLI_Detroix23.egg-info/: PKG-INFO  SOURCES.txt
cli/: __main__.py
cli/animations/: loadings.py  screen.py
cli/base/: formating.py  models.py  style.py
cli/inputs/: inputs.py  select_menu.py
src/cli_detroix23/: __main__.py
src/cli_detroix23/animations/: exemples.py  loadings.py  screen.py
src/cli_detroix23/base/: boxes.py  code.py  colors.py  controls.py  exemples.py  formating.py  specials.py  style.py
src/cli_detroix23/compatibility/: plateform.py  types.py  unix.py
src/cli_detroix23/inputs/: exemples.py  fetch.py  inputs.py  keys.py  select_menu.py  start.py  unix.py  windows.py
src/cli_detroix23/maths/: maths.py  transformations.py
src/cli_detroix23/shapes/: base.py  exemples.py  sprites.py
src/cli_detroix23/test/: debug.py
