[project]
name = "cli_detroix23"
version = "0.1.0"
description = "A CLI all-in tool made for myself."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
]
readme = "README.md"
license = "CC-BY-4.0"
license-files = [
    "LICENSE.md"
]

[project.urls]
Repository = "https://github.com/Detroix23/"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

